# screen

./: Cargo.toml  crosscompile.sh
.cargo/: config.toml
src/: data.rs  fonts.rs  framebuffer.rs  main.rs  runner.rs  utils.rs
src/components/: container.rs  datetime.rs  factory.rs  image.rs  mod.rs  news.rs  openweather.rs  openweatherforecast.rs  randomimage.rs  text.rs
src/layout/: containerbox.rs  imagebox.rs  mod.rs  textbox.rs
src/models/: mod.rs  news.rs  weather.rs
src/painter/: fill.rs  image.rs  line.rs  mod.rs  rect.rs  text.rs
src/providers/: factory.rs  mod.rs  openweather.rs  openweatherforecast.rs  rss.rs
