[package]
name = "screen"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
datetime = "0.5.2"
image = "0.25.6"
png_encode_mini = "0.1.2"
reqwest = {version = "0.12.15", default-features = false, features = ["rustls-tls", "blocking"] }
rusttype = "0.9.3"
serde = { version = "1.0.219" , features = ["derive"] }
serde-xml-rs = "0.7.0"
serde_json = "1.0.140"
